--- a/index.html
+++ b/index.html
@@ -307,17 +307,17 @@
         </button>
     </div>
     <div class="resources-row">
-        <button class="resource-button" onclick="openModal('plant')">
-            <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Plant.png" alt="Plant">
-            <span id="plantCount">0</span>  <!-- Corrected ID -->
-            <span class="production-count" id="plantProduction">0</span> <!-- Corrected ID -->
-        </button>
+        <button class="resource-button" onclick="openModal('plantResource')">
+    <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Plant.png" alt="Plant">
+    <span id="plantResourceCount">0</span>  <!-- Corrected ID -->
+    <span class="production-count" id="plantResourceProduction">0</span> <!-- Corrected ID -->
+</button>
 
-        <button class="resource-button" onclick="openModal('energy')">
-            <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Energy.png" alt="Energy">
-            <span id="energyCount">0</span>  <!-- Corrected ID -->
-            <span class="production-count" id="energyProduction">0</span> <!-- Corrected ID -->
-        </button>
+        <button class="resource-button" onclick="openModal('energyResource')">
+    <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Energy.png" alt="Energy">
+    <span id="energyResourceCount">0</span>  <!-- Corrected ID -->
+    <span class="production-count" id="energyResourceProduction">0</span> <!-- Corrected ID -->
+</button>
 
         <button class="resource-button" onclick="openModal('heat')">
             <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Heat.png" alt="Heat">
@@ -326,7 +326,6 @@
         </button>
     </div>
 </div>
-
 
     <!-- Produce Button -->
     <div class="produce-container full-width">
@@ -444,22 +443,7 @@
 
 function openModal(resource) {
     currentResource = resource; // Store the current resource being edited
-    const resourceCountElement = document.getElementById(`${currentResource}Count`);
-    const productionCountElement = document.getElementById(`${currentResource}Production`);
-
-    // Update the modal with current values
     document.getElementById('modalResourceName').innerText = `Resource: ${capitalizeFirstLetter(resource)}`;
-    document.getElementById('modalResourceValue').innerText = resourceCountElement.innerText;
-
-    // If the resource is "tr", hide production section, otherwise show it
-    if (currentResource === 'tr') {
-        document.getElementById('productionSection').style.display = 'none';
-    } else {
-        document.getElementById('productionSection').style.display = 'block';
-        document.getElementById('modalProductionValue').innerText = productionCountElement ? productionCountElement.innerText : '0';
-    }
-
-    // Display the modal
     document.getElementById('resourceModal').style.display = "block";
 }
 
@@ -471,13 +455,14 @@ function closeModal() {
 function updateResource(delta) {
     if (currentResource) {
         const resourceCountElement = document.getElementById(`${currentResource}Count`);
+        if (!resourceCountElement) {
+            console.error(`Resource count element for "${currentResource}" not found.`);
+            return;
+        }
         let count = parseInt(resourceCountElement.innerText);
         count += delta;
         if (count < 0) count = 0; // Ensure count does not go below 0
         resourceCountElement.innerText = count;
-
-        // Update the modal value as well
-        document.getElementById('modalResourceValue').innerText = count;
     }
 }
 
@@ -546,52 +531,49 @@ window.onclick = function(event) {
     }
      // Function to update the production value
 function updateProduction(delta) {
-    if (currentResource && currentResource !== 'tr') {
+    if (currentResource) {
         const productionCountElement = document.getElementById(`${currentResource}Production`);
-        if (productionCountElement) {
-            let production = parseInt(productionCountElement.innerText);
-            production += delta;
-
-            // Allow negative values for credit production only
-            if (currentResource !== 'credit' && production < 0) {
-                production = 0;
-            }
-
-            productionCountElement.innerText = production;
-
-            // Update the modal value as well
-            document.getElementById('modalProductionValue').innerText = production;
+        if (!productionCountElement) {
+            console.error(`Production count element for "${currentResource}" not found.`);
+            return;
         }
+        let production = parseInt(productionCountElement.innerText);
+        production += delta;
+
+        // Allow negative values for credit production only
+        if (currentResource !== 'credit' && production < 0) {
+            production = 0;
+        }
+
+        productionCountElement.innerText = production;
     }
 }
 
 // Function to produce resources by adding production counts to resources
 function produceResources() {
-    const resources = ['credit', 'steel', 'titanium', 'plant', 'energy', 'heat'];
+    const resources = ['credit', 'steel', 'titanium', 'plantresource', 'energy', 'heat'];
     let trValue = parseInt(document.getElementById('trCount').innerText);
     
     resources.forEach(resource => {
         const resourceCountElement = document.getElementById(`${resource}Count`);
         const productionCountElement = document.getElementById(`${resource}Production`);
         
-        if (resourceCountElement && productionCountElement) {
-            let resourceValue = parseInt(resourceCountElement.innerText);
-            let productionValue = parseInt(productionCountElement.innerText);
+        let resourceValue = parseInt(resourceCountElement.innerText);
+        let productionValue = parseInt(productionCountElement.innerText);
 
-            // Special logic for credit: add TR value to credit production
-            if (resource === 'credit') {
-                resourceValue += productionValue + trValue;
-            } else {
-                resourceValue += productionValue;
-            }
-
-            // Ensure the new value is not negative
-            if (resource !== 'credit' && resourceValue < 0) {
-                resourceValue = 0;
-            }
-
-            resourceCountElement.innerText = resourceValue;
+        // Special logic for credit: add TR value to credit production
+        if (resource === 'credit') {
+            resourceValue += productionValue + trValue;
+        } else {
+            resourceValue += productionValue;
         }
+
+        // Ensure the new value is not negative
+        if (resource !== 'credit' && resourceValue < 0) {
+            resourceValue = 0;
+        }
+
+        resourceCountElement.innerText = resourceValue;
     });
 }
     // Load game state from local storage
