--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ function updateResource(delta) {
         resourceCountElement.innerText = count;
         resourceDisplayElement.innerText = count;
 
-        saveGameState(); // Save state after updating resource
+        saveGameState(); // Save immediately after update
     }
 }
 
@@ -510,10 +510,10 @@ function updateProduction(delta) {
         productionCountElement.innerText = production;
         productionDisplayElement.innerText = production;
 
-        saveGameState(); // Save state after updating production
+        saveGameState(); // Save immediately after update
     }
 }
-
+     
 function updateTR(delta) {
     const trValueElement = document.getElementById('trCount');
     const trDisplayElement = document.getElementById('trValueDisplay');
@@ -524,9 +524,9 @@ function updateTR(delta) {
     trValueElement.innerText = trValue;
     trDisplayElement.innerText = trValue;
 
-    saveGameState(); // Save state after updating TR
+    saveGameState(); // Save immediately after update
 }
-
+     
 function produceResources() {
     const resources = [
         { id: 'credit', countId: 'creditCount', productionId: 'creditProduction' },
@@ -559,7 +559,7 @@ function produceResources() {
         resourceCountElement.innerText = resourceValue;
     });
 
-    saveGameState(); // Save state after production
+    saveGameState(); // Save immediately after producing resources
 }
 
 
@@ -619,30 +619,36 @@ window.onclick = function(event) {
     }
 
     // Save game state to local storage
-    function saveGameState() {
-    const gameState = {
-        vpCount,
-        tagCounts,
-        resources: {
-            credit: parseInt(document.getElementById('creditCount').innerText),
-            steel: parseInt(document.getElementById('steelCount').innerText),
-            titanium: parseInt(document.getElementById('titaniumCount').innerText),
-            plant: parseInt(document.getElementById('plantResourceCount').innerText),
-            energy: parseInt(document.getElementById('energyResourceCount').innerText),
-            heat: parseInt(document.getElementById('heatCount').innerText)
-        },
-        productions: {
-            credit: parseInt(document.getElementById('creditProduction').innerText),
-            steel: parseInt(document.getElementById('steelProduction').innerText),
-            titanium: parseInt(document.getElementById('titaniumProduction').innerText),
-            plant: parseInt(document.getElementById('plantResourceProduction').innerText),
-            energy: parseInt(document.getElementById('energyResourceProduction').innerText),
-            heat: parseInt(document.getElementById('heatProduction').innerText)
-        },
-        trValue: parseInt(document.getElementById('trCount').innerText)
-    };
-    localStorage.setItem('terraformingMarsGameState', JSON.stringify(gameState));
+    let saveTimeout;
+
+function saveGameState() {
+    clearTimeout(saveTimeout);
+    saveTimeout = setTimeout(() => {
+        const gameState = {
+            vpCount,
+            tagCounts,
+            resources: {
+                credit: parseInt(document.getElementById('creditCount').innerText),
+                steel: parseInt(document.getElementById('steelCount').innerText),
+                titanium: parseInt(document.getElementById('titaniumCount').innerText),
+                plant: parseInt(document.getElementById('plantResourceCount').innerText),
+                energy: parseInt(document.getElementById('energyResourceCount').innerText),
+                heat: parseInt(document.getElementById('heatCount').innerText)
+            },
+            productions: {
+                credit: parseInt(document.getElementById('creditProduction').innerText),
+                steel: parseInt(document.getElementById('steelProduction').innerText),
+                titanium: parseInt(document.getElementById('titaniumProduction').innerText),
+                plant: parseInt(document.getElementById('plantResourceProduction').innerText),
+                energy: parseInt(document.getElementById('energyResourceProduction').innerText),
+                heat: parseInt(document.getElementById('heatProduction').innerText)
+            },
+            trValue: parseInt(document.getElementById('trCount').innerText)
+        };
+        localStorage.setItem('terraformingMarsGameState', JSON.stringify(gameState));
+    }, 500); // Save after 500ms if no other changes are made
 }
+
 
      // Function to update the production value
 function updateProduction(delta) {
