--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ function saveGameState() {
             trValue: parseInt(document.getElementById('trCount').innerText)
         };
         localStorage.setItem('terraformingMarsGameState', JSON.stringify(gameState));
-    }, 500); // Save after 500ms if no other changes are made
+    }, 500);
 }
 
 
@@ -761,19 +761,22 @@ function updateTR(delta) {
 
         // Restore Resource Counts
         Object.keys(gameState.resources).forEach(resource => {
-            document.getElementById(`${resource}Count`).innerText = gameState.resources[resource];
+            if (document.getElementById(`${resource}Count`)) {
+                document.getElementById(`${resource}Count`).innerText = gameState.resources[resource];
+            }
         });
 
         // Restore Production Counts
         Object.keys(gameState.productions).forEach(resource => {
-            document.getElementById(`${resource}Production`).innerText = gameState.productions[resource];
+            if (document.getElementById(`${resource}Production`)) {
+                document.getElementById(`${resource}Production`).innerText = gameState.productions[resource];
+            }
         });
 
         // Restore TR Value
-        document.getElementById('trCount').innerText = gameState.trValue;
+        document.getElementById('trCount').innerText = gameState.trValue || 0;
     }
 }
-
 
     // Reset game state
     function resetGameState() {
