--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Kami's Terraforming Mars Tag Manager</title>
 <style>
+      /* Style for round, uniform + and - buttons */
+    .round-button {
+        width: 50px; /* Uniform width */
+        height: 50px; /* Uniform height */
+        border-radius: 50%; /* Make buttons round */
+        font-size: 1.5em; /* Font size for + and - signs */
+        background-color: #e6e3e3; /* Button background color */
+        color: black; /* Text color */
+        border: 1px solid #888; /* Border color */
+        margin: 5px 0; /* Small vertical margin for stacking */
+        cursor: pointer;
+    }
+
+    /* Optional: Button hover effect */
+    .round-button:hover {
+        background-color: #ccc; /* Slightly darker on hover */
+    }
+
+    /* Modal adjustments for alignment */
+    .modal-content {
+        padding: 20px;
+        border-radius: 10px;
+        max-width: 300px; /* Restrict width for mobile view */
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    /* Alignment for labels */
+    .modal-content div > span {
+        display: block;
+        text-align: left;
+        margin-left: 5px; /* Align left within the container */
+    }
      /* Style for round, uniform + and - buttons */
     .round-button {
         width: 50px; /* Uniform width */
@@ -355,25 +388,34 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
         <div style="display: flex; flex-direction: column; align-items: center; color: black;">
-            
-            <!-- Resource Value Section with Label -->
-            <div style="display: flex; align-items: center; margin-bottom: 20px;">
-                <span style="font-size: 1.5em; color: black; margin-right: 10px;">Resource</span>
-                <h3 id="resourceValueDisplay" style="font-size: 2em; margin: 0 10px;">0</h3> <!-- Display for resource value -->
-                <button onclick="updateResource(1)" class="round-button">+</button>
-                <button onclick="updateResource(-1)" class="round-button">-</button>
+
+            <!-- Resource Section with Label, Value, and Buttons -->
+            <div style="display: flex; flex-direction: row; align-items: center; margin-bottom: 20px; justify-content: flex-start; width: 100%;">
+                <div style="flex-basis: 50%; text-align: left;">
+                    <span style="font-size: 1.5em; color: black;">Resource</span>
+                </div>
+                <div style="display: flex; flex-direction: column; align-items: center; flex-basis: 50%;">
+                    <button onclick="updateResource(1)" class="round-button">+</button>
+                    <h3 id="resourceValueDisplay" style="font-size: 2em; margin: 10px 0;">0</h3>
+                    <button onclick="updateResource(-1)" class="round-button">-</button>
+                </div>
             </div>
 
-            <!-- Production Value Section with Label -->
-            <div style="display: flex; align-items: center;">
-                <span style="font-size: 1.5em; color: brown; margin-right: 10px;">Production</span>
-                <p id="productionValueDisplay" style="font-size: 2em; color: brown; font-weight: bold; margin: 0 10px;">0</p>
-                <button onclick="updateProduction(1)" class="round-button">+</button>
-                <button onclick="updateProduction(-1)" class="round-button">-</button>
+            <!-- Production Section with Label, Value, and Buttons -->
+            <div style="display: flex; flex-direction: row; align-items: center; justify-content: flex-start; width: 100%;">
+                <div style="flex-basis: 50%; text-align: left;">
+                    <span style="font-size: 1.5em; color: brown;">Production</span>
+                </div>
+                <div style="display: flex; flex-direction: column; align-items: center; flex-basis: 50%;">
+                    <button onclick="updateProduction(1)" class="round-button">+</button>
+                    <p id="productionValueDisplay" style="font-size: 2em; color: brown; font-weight: bold; margin: 10px 0;">0</p>
+                    <button onclick="updateProduction(-1)" class="round-button">-</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
      
 <!-- Modal for TR Management -->
 <div id="trModal" class="modal">
