--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Kami's Terraforming Mars Tag Manager</title>
 <style>
       /* Style for round, uniform + and - buttons */
+    /* Style for round, uniform + and - buttons */
     .round-button {
         width: 50px; /* Uniform width */
         height: 50px; /* Uniform height */
@@ -14,7 +15,6 @@
         background-color: #e6e3e3; /* Button background color */
         color: black; /* Text color */
         border: 1px solid #888; /* Border color */
-        margin: 5px 0; /* Small vertical margin for stacking */
         cursor: pointer;
     }
 
@@ -30,6 +30,11 @@
         max-width: 300px; /* Restrict width for mobile view */
         width: 100%;
         box-sizing: border-box;
+    }
+
+    /* Gap between buttons */
+    .round-button + .round-button {
+        margin-left: 10px; /* Adds space between + and - buttons */
     }
 
     /* Alignment for labels */
@@ -387,34 +392,31 @@
 <div id="resourceModal" class="modal">
     <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
-        <div style="display: flex; flex-direction: column; align-items: center; color: black;">
+        <div style="display: flex; flex-direction: column; align-items: flex-start; color: black; width: 100%;">
 
             <!-- Resource Section with Label, Value, and Buttons -->
-            <div style="display: flex; flex-direction: row; align-items: center; margin-bottom: 20px; justify-content: flex-start; width: 100%;">
-                <div style="flex-basis: 50%; text-align: left;">
-                    <span style="font-size: 1.5em; color: black;">Resource</span>
-                </div>
-                <div style="display: flex; flex-direction: column; align-items: center; flex-basis: 50%;">
+            <div style="display: flex; align-items: center; justify-content: space-between; width: 100%; margin-bottom: 20px;">
+                <span style="font-size: 1.5em; color: black; margin-right: 10px;">Resource</span>
+                <h3 id="resourceValueDisplay" style="font-size: 2em; margin: 0 10px;">0</h3>
+                <div style="display: flex; gap: 10px;">
                     <button onclick="updateResource(1)" class="round-button">+</button>
-                    <h3 id="resourceValueDisplay" style="font-size: 2em; margin: 10px 0;">0</h3>
                     <button onclick="updateResource(-1)" class="round-button">-</button>
                 </div>
             </div>
 
             <!-- Production Section with Label, Value, and Buttons -->
-            <div style="display: flex; flex-direction: row; align-items: center; justify-content: flex-start; width: 100%;">
-                <div style="flex-basis: 50%; text-align: left;">
-                    <span style="font-size: 1.5em; color: brown;">Production</span>
-                </div>
-                <div style="display: flex; flex-direction: column; align-items: center; flex-basis: 50%;">
+            <div style="display: flex; align-items: center; justify-content: space-between; width: 100%;">
+                <span style="font-size: 1.5em; color: brown; margin-right: 10px;">Production</span>
+                <p id="productionValueDisplay" style="font-size: 2em; color: brown; font-weight: bold; margin: 0 10px;">0</p>
+                <div style="display: flex; gap: 10px;">
                     <button onclick="updateProduction(1)" class="round-button">+</button>
-                    <p id="productionValueDisplay" style="font-size: 2em; color: brown; font-weight: bold; margin: 10px 0;">0</p>
                     <button onclick="updateProduction(-1)" class="round-button">-</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
      
 <!-- Modal for TR Management -->
