--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 
     /* Style for round, uniform + and - buttons */
     .round-button {
-        width: 50px; /* Uniform width */
-        height: 50px; /* Uniform height */
+        width: 40px; /* Adjusted size */
+        height: 40px; /* Adjusted size */
         border-radius: 50%; /* Make buttons round */
-        font-size: 1.5em; /* Font size for + and - signs */
+        font-size: 1.2em; /* Adjusted font size */
         background-color: #e6e3e3; /* Button background color */
         color: black; /* Text color */
         border: 1px solid #888; /* Border color */
         cursor: pointer;
     }
 
-    /* Optional: Button hover effect */
+    /* Button hover effect */
     .round-button:hover {
         background-color: #ccc; /* Slightly darker on hover */
     }
@@ -31,26 +31,29 @@
         width: 90%; /* Adjust to fit within mobile view */
         box-sizing: border-box;
     }
-      /* Flex container for resource and production rows */
+
+    /* Flex container for resource and production rows */
     .popup-section {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         width: 100%;
     }
-       /* Individual row styling */
+
+    /* Individual row styling */
     .popup-row {
         display: flex;
         align-items: center;
         justify-content: space-between;
         width: 100%;
         margin-bottom: 20px;
-        flex-wrap: wrap; /* Enable wrapping for narrow screens */
     }
-      /* Labels and values styling */
+
+    /* Labels and values styling */
     .popup-label {
-        font-size: 1.5em;
+        font-size: 1.2em;
         margin-right: 10px;
+        flex: 1;
     }
     .resource-label {
         color: black;
@@ -59,8 +62,14 @@
         color: brown;
     }
     .popup-value {
-        font-size: 2em;
+        font-size: 1.5em;
         margin: 0 10px;
+    }
+
+    /* Button group styling */
+    .button-group {
+        display: flex;
+        gap: 5px; /* Space between + and - buttons */
     }
 
     /* Alignment for labels */
@@ -69,35 +78,34 @@
         text-align: left;
         margin-left: 5px; /* Align left within the container */
     }
-     /* Style for round, uniform + and - buttons */
-    .round-button {
-        width: 50px; /* Uniform width */
-        height: 50px; /* Uniform height */
-        border-radius: 50%; /* Make buttons round */
-        font-size: 1.5em; /* Font size for + and - signs */
-        background-color: #e6e3e3; /* Button background color */
-        color: black; /* Text color */
-        border: 1px solid #888; /* Border color */
-        margin: 0 15px; /* Significant space between buttons */
-        cursor: pointer;
-    }
- /* Button group styling */
-    .button-group {
-        display: flex;
-        gap: 10px; /* Space between + and - buttons */
-    }
-    .round-button {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        font-size: 1.5em;
-        background-color: #e6e3e3;
-        color: black;
-        border: 1px solid #888;
-        cursor: pointer;
-    }
-    .round-button:hover {
-        background-color: #ccc;
+
+    /* Media query for smaller screens */
+    @media (max-width: 480px) {
+        .modal-content {
+            max-width: 100%; /* Allow modal to take full width */
+            padding: 15px; /* Reduce padding for mobile */
+        }
+        
+        .popup-row {
+            flex-direction: row; /* Keep elements in a row on mobile */
+            align-items: center;
+            justify-content: space-between;
+            gap: 5px;
+        }
+
+        .button-group {
+            margin-left: auto; /* Align button group to the right */
+        }
+        
+        .popup-label, .popup-value {
+            font-size: 1em; /* Slightly smaller font on mobile */
+        }
+
+        .round-button {
+            width: 35px; /* Slightly smaller button size */
+            height: 35px;
+            font-size: 1em;
+        }
     }
 
     /* Media query for smaller screens */
