--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         color: black; /* Text color */
         border: 1px solid #888; /* Border color */
         cursor: pointer;
+        display: flex; /* Center text in button */
+        align-items: center; /* Center text vertically */
+        justify-content: center; /* Center text horizontally */
     }
 
     /* Button hover effect */
@@ -61,15 +64,20 @@
     .production-label {
         color: brown;
     }
+
+    /* Center the value with the buttons */
     .popup-value {
         font-size: 1.5em;
-        margin: 0 10px;
+        margin-right: 15px; /* Add spacing between value and buttons */
+        display: flex;
+        align-items: center; /* Center value vertically */
     }
 
     /* Button group styling */
     .button-group {
         display: flex;
-        gap: 5px; /* Space between + and - buttons */
+        gap: 10px; /* Space between + and - buttons */
+        align-items: center; /* Center buttons vertically with the value */
     }
 
     /* Alignment for labels */
@@ -107,34 +115,6 @@
             font-size: 1em;
         }
     }
-
-    /* Media query for smaller screens */
-    @media (max-width: 480px) {
-        .modal-content {
-            max-width: 100%; /* Allow modal to take full width */
-            padding: 15px; /* Reduce padding for mobile */
-        }
-        
-        .popup-row {
-            flex-direction: column; /* Stack elements vertically */
-            align-items: flex-start;
-        }
-
-        .button-group {
-            margin-top: 10px; /* Space buttons below value */
-        }
-
-        .popup-value {
-            margin-bottom: 10px; /* Add space between value and buttons */
-        }
-    }
-    /* Optional: Button hover effect */
-    .round-button:hover {
-        background-color: #ccc; /* Slightly darker on hover */
-    }
-     button.increment {
-          margin-right: 0px; /* Adds space between + and - buttons */
-     }
      /* Modal styles */
 .modal {
     display: none; /* Hidden by default */
