--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@ function produceResources() {
     ];
     
     let trValue = parseInt(document.getElementById('trCount').innerText);
-    
+
     resources.forEach(resource => {
         const resourceCountElement = document.getElementById(resource.countId);
         const productionCountElement = document.getElementById(resource.productionId);
@@ -850,16 +850,27 @@ function produceResources() {
         let productionValue = parseInt(productionCountElement.innerText);
 
         if (resource.id === 'credit') {
+            // For credit, add both production and TR value
             resourceValue += productionValue + trValue;
+        } else if (resource.id === 'heat') {
+            // For heat, add heat production, energy resource, and current heat resource
+            const energyValue = parseInt(document.getElementById('energyResourceCount').innerText);
+            resourceValue += productionValue + energyValue;
+        } else if (resource.id === 'energy') {
+            // For energy, reset to 0 and add production value
+            resourceValue = productionValue;
         } else {
+            // For other resources, just add production value
             resourceValue += productionValue;
         }
 
+        // Update the resource value display
         resourceCountElement.innerText = resourceValue;
     });
 
     saveGameState(); // Save immediately after producing resources
 }
+
 
 function openTRModal() {
     // Get the current TR value
