--- a/index.html
+++ b/index.html
@@ -557,7 +557,9 @@
         Official Rulebook
     </a></h2>
 </p>
-
+<p> Need a video to learn the game? Here is a video by Isaac Fryxelius!</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/A9-FpNpptjM?si=-XM6B_-kjfaV_oLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
 <script>
         // Set up event listeners to close modals when clicking outside the modal-content area
     document.addEventListener("DOMContentLoaded", function() {
